@@ -21,12 +21,14 @@ public class WorkoutCreatorTest {
     public void setUp() {
         exercises = new ArrayList<>();
         exercises.add(new DefaultExercise("Alt-Single Leg Box Squats", "", new String[]{"LEGS"}, new String[]{"Chair"}));
-        exercises.add(new DefaultExercise("1 & 1/2 Bottom out Squats w/ Kettle Bell","",new String[]{"LEGS"}, new String[]{"KettleBell"}));
-        exercises.add(new DefaultExercise("Air squats w/ twist jump","",new String[]{"LEGS"}, new String[]{}));
-        exercises.add(new DefaultExercise("Jump squats w/ Kettle Bell","",new String[]{"LEGS"}, new String[]{"KettleBell"}));
-        exercises.add(new DefaultExercise("Heel touch squats alternate single leg","",new String[]{"LEGS"}, new String[]{"KettleBell"}));
-        exercises.add(new DefaultExercise("Alternate sprinter lunge w/ Kettle Bell","",new String[]{"LEGS"}, new String[]{"KettleBell"}));
-        exercises.add(new DefaultExercise("Unilateral loaded lunge w/ Kettle Bell (swap round 2)","",new String[]{"LEGS"}, new String[]{"KettleBell"}));
+        exercises.add(new DefaultExercise("1 & 1/2 Bottom out Squats w/ Kettle Bell", "", new String[]{"LEGS"}, new String[]{"KettleBell"}));
+        exercises.add(new DefaultExercise("Air squats w/ twist jump", "", new String[]{"LEGS"}, new String[]{}));
+        exercises.add(new DefaultExercise("Jump squats w/ Kettle Bell", "", new String[]{"LEGS"}, new String[]{"KettleBell"}));
+        exercises.add(new DefaultExercise("Heel touch squats alternate single leg", "", new String[]{"LEGS"}, new String[]{"KettleBell"}));
+        exercises.add(new DefaultExercise("Alternate sprinter lunge w/ Kettle Bell", "", new String[]{"LEGS"}, new String[]{"KettleBell"}));
+        exercises.add(new DefaultExercise("Unilateral loaded lunge w/ Kettle Bell (swap round 2)", "", new String[]{"LEGS"}, new String[]{"KettleBell"}));
+        exercises.add(new DefaultExercise("Plyo / Jump sprinter lunge w/ Kettle Bell", "", new String[]{"CARDIO"}, new String[]{"KETTLE_BELL"}));
+        exercises.add(new DefaultExercise("Burpees w/ pushup", "", new String[]{"PUSH"}, new String[]{}));
     }
 
     @After
@@ -45,9 +47,9 @@ public class WorkoutCreatorTest {
     @Test
     public void workoutEquipmentTest() {
         WorkoutCreator workoutCreator = new WorkoutCreator();
-        WorkoutArguments workoutArgs = new WorkoutArguments(new ArrayList<>(), new HashSet<>(Arrays.asList(Equipment.KETTLE_BELL)));
+        WorkoutArguments workoutArgs = new WorkoutArguments(new ArrayList<>(), new HashSet<>(List.of(Equipment.KETTLE_BELL)));
         Workout workout = workoutCreator.createWorkout(workoutArgs, exercises);
-        for(Exercise exercise : workout.getExercises()){
+        for (Exercise exercise : workout.getExercises()) {
             List<Equipment> equipment = exercise.getNeededEquipment();
             assertTrue(equipment.isEmpty() || (equipment.size() == 1 && equipment.contains(Equipment.KETTLE_BELL)));
         }
@@ -56,7 +58,7 @@ public class WorkoutCreatorTest {
     @Test
     public void emptyWorkoutEquipmentTest() {
         WorkoutCreator workoutCreator = new WorkoutCreator();
-        WorkoutArguments workoutArgs = new WorkoutArguments(new ArrayList<>(), new HashSet<>(Arrays.asList(Equipment.RESISTANCE_BAND)));
+        WorkoutArguments workoutArgs = new WorkoutArguments(new ArrayList<>(), new HashSet<>(List.of(Equipment.RESISTANCE_BAND)));
         Workout workout = workoutCreator.createWorkout(workoutArgs, exercises);
         assertTrue(workout.getExercises().isEmpty());
     }
@@ -64,20 +66,20 @@ public class WorkoutCreatorTest {
     @Test
     public void workoutPatternTest() {
         WorkoutCreator workoutCreator = new WorkoutCreator();
-        ArrayList<String> workoutPattern = new ArrayList<>();
+        List<String> workoutPattern = Arrays.asList("PUSH", "LEGS", "CARDIO");
         WorkoutArguments workoutArgs = new WorkoutArguments(workoutPattern, new HashSet<>(Arrays.asList(Equipment.KETTLE_BELL, Equipment.RESISTANCE_BAND)));
         Workout workout = workoutCreator.createWorkout(workoutArgs, exercises);
-        //TODO assert that workout pattern is respected
-        assertTrue(workout.getExercises().isEmpty());
+        for(Exercise exercise : workout.getExercises()){
+            List<Equipment> neededEquipment = exercise.getNeededEquipment();
+            assertTrue(neededEquipment.isEmpty() || neededEquipment.contains(Equipment.KETTLE_BELL) || neededEquipment.contains(Equipment.RESISTANCE_BAND) );
+        }
     }
 
     @Test
     public void emptyWorkoutPatternTest() {
         WorkoutCreator workoutCreator = new WorkoutCreator();
-        ArrayList<String> workoutPattern = new ArrayList<>();
-        WorkoutArguments workoutArgs = new WorkoutArguments(workoutPattern, new HashSet<>(Arrays.asList(Equipment.KETTLE_BELL, Equipment.RESISTANCE_BAND)));
+        WorkoutArguments workoutArgs = new WorkoutArguments(WorkoutArguments.WORKOUT_PATTERN, new HashSet<>(Arrays.asList(Equipment.RESISTANCE_BAND)));
         Workout workout = workoutCreator.createWorkout(workoutArgs, exercises);
-        //TODO assert that workout contains default number of exercises
         assertTrue(workout.getExercises().isEmpty());
     }
 }
